# pyMIRI

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  setup.cfg
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
imager/: __init__.py  make_flat.py
package/pyMIRI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
package/pymiri/gui/: SelectData.py  select_data.py
package/pymiri/imager/: MakeFlat.py  make_flat.py
package/pymiri/lrs/: MakeFlat.py  make_flat.py
package/pymiri/utils/: DownloadData.py  __init__.py  check_directory.py  csv_utils.py  download_data.py  fits_utils.py
utils/: DownloadData.py  __init__.py  download_data.py
utils/scripts/: select_data.py
