[metadata]
name = pyMIRI
version = 1.0.0-beta
url = https://github.com/STScI-MIRI/pyMIRI
author = Sachindev Shenoy
author_email = "Sachindev Shenoy" <sachin.4m.stsci@gmail.com>
description = Collection of functions and class to facilitate MIRI data reduction and analysis.
long_description = file:README.md
license = MIT
license_file = LICENSE
calssifier =
    "License :: OSI Approved :: MIT License"


[options]
package_dir =
    =package
packages = find:
include_package_data = True
install_requires =
	astropy>=6.1
	astroquery
	jwst
	matplotlib
	numpy>=2.2
	pandas>=2.2
	pyds9>=1.8
	PyQt5
	
	
[options.packages.find]
where = package
exclude =
    test*
    bin


[tool.setuptools.package-data]
"pyMIRI" = ["config/*.json"]


[options.entry_points]
console_scripts =
    get_data = pymiri.utils.download_data:main
    select_data = pymiri.gui.select_data:main
    generate_imager_flat = pymiri.imager.make_flat:main
    generate_lrs_flat = pymiri.lrs.make_falt:main
    